src/objects/Third_Party_Master_List__c.object
<CustomObject>
    <fields>
        <fullName>HR_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resolves HR Data Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NonHR_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resolves Non-HR Data Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Dispute Resolution Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Statutory Body</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verification Provider</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Official website of the Third Party Provider</description>
        <inlineHelpText>What is the Website for this Third Party Provider?</inlineHelpText>
        <label>Website</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Third Party Master List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Website__c</columns>
        <columns>HR_Data__c</columns>
        <columns>NonHR_Data__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Dispute_Resolution_Provider</fullName>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Website__c</columns>
        <columns>HR_Data__c</columns>
        <columns>NonHR_Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Dispute Resolution Provider</value>
        </filters>
        <label>Dispute Resolution Provider</label>
    </listViews>
    <listViews>
        <fullName>U_S_Statutory_Bodies</fullName>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Website__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>U.S. Statutory Body</value>
        </filters>
        <label>U.S. Statutory Bodies</label>
    </listViews>
    <listViews>
        <fullName>Verification_Providers</fullName>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Website__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Verification Provider</value>
        </filters>
        <label>Verification Providers</label>
    </listViews>
    <nameField>
        <label>Third Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Third Party Master List</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>